--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ url                      : "https://thehazardparadox.com" # the base hostname & 
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : "test/assets/images/OS_logo2.jpg" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs              : # true, false (default)
 words_per_minute         : 200
@@ -142,7 +142,7 @@ author:
 footer:
   links:
     - label: "YouTube"
-      icon: "fa fa-youtube-play"
+      icon: "fa-brands fa-youtube"
       url: "https://www.youtube.com/@TheHazardParadox"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
