--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ url                      : "https://thehazardparadox.com" # the base hostname & 
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "test/assets/images/OS_logo2.jpg" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs              : # true, false (default)
 words_per_minute         : 200
@@ -114,8 +114,8 @@ analytics:
 # Site Author
 author:
   name             : "Hazard"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
+  avatar           : "test/assets/images/OS_logo2.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  bio              : "A very hazardous person, trust."
   location         : "Texas, USA"
   email            :
   links:
